--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 run-files/dp-set/case-topics-filtered-phrasestop-unigram_dir_mu_1050.00.run filter=lfs diff=lfs merge=lfs -text
+features/out.txt filter=lfs diff=lfs merge=lfs -text
